--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-native-screens": "^3.10.2",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.0.0",
+    "react-native-video": "^5.2.0",
+    "react-native-video-player": "^0.12.0",
     "react-native-webview": "^11.17.1",
     "styled-components": "^5.3.3"
   },
