--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -190,6 +190,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-ads:20.6.0'
+    
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
