--- a/app.json
+++ b/app.json
@@ -1,4 +1,8 @@
 {
   "name": "drawingStation",
-  "displayName": "drawingStation"
+  "displayName": "drawingStation",
+  "react-native-google-mobile-ads": {
+    "android_app_id": "ca-app-pub-8171237716616755~5272033048",
+    "ios_app_id": "ca-app-pub-8171237716616755~5272033048"
+  }
 }
