--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.16.0",
+    "@react-native-firebase/admob": "^11.5.0",
     "@react-native-firebase/app": "^14.3.1",
     "@react-native-firebase/auth": "^14.3.1",
     "@react-native-firebase/firestore": "^14.3.1",
@@ -22,12 +23,11 @@
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-animatable": "^1.3.2",
+    "react-native-google-mobile-ads": "^4.2.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.0.0",
-    "react-native-video": "^5.2.0",
-    "react-native-video-player": "^0.12.0",
     "react-native-webview": "^11.17.1",
     "styled-components": "^5.3.3"
   },
